# Drone-Swarm

./: .gitignore  README.md  SETUP_GUIDE.md  TECHNICAL_PORTFOLIO.md
drone-main/: CMakeLists.txt  readme.md  rpi_setup.md  simulator_setup.md  sys-var.sh
drone-main/lib/: CMakeLists.txt  helpers.cpp  helpers.h
drone-main/lib/command_line_argument_parser/: command_line_argument_parser.cpp  command_line_argument_parser.h
drone-main/lib/drone/: drone.cpp  drone.h
drone-main/lib/mutex/: mutex.cpp  mutex.h
drone-main/lib/thread_tracker/: thread_tracker.cpp  thread_tracker.h
drone-main/lib/timer/: main.cpp  timer.h
drone-main/lib/udp_socket/: client.c  server.c  udp_socket.h
drone-main/system_configuration/: batman_setup.sh  drone_program.sh  drone_programs.service  install_arch_arm.sh  install_arch_arm64.sh  install_required_packages.sh  list_wireless_cards.sh  load_required_kernel_modules.sh  load_service.sh  pacman.txt  simulator.sh
drone-main/test_flights/action_goto_gpsay_square/: CMakeLists.txt  action_goto_gpsay_square.cpp
drone-main/test_flights/action_goto_nedy_square/: CMakeLists.txt  action_goto_nedy_square.cpp
drone-main/test_flights/connect_test/: CMakeLists.txt
drone-main/test_flights/crazy_square/: CMakeLists.txt  crazy_square.cpp
drone-main/test_flights/cube/: CMakeLists.txt  cube.cpp  fly-in-cube.service  fly-in-cube.sh
drone-main/test_flights/leader/: CMakeLists.txt  leader.cpp
drone-main/test_flights/offboard_goto_gpsay_square/: CMakeLists.txt  offboard_goto_gpsay_square.cpp
drone-main/test_flights/offboard_goto_nedy_square/: CMakeLists.txt  offboard_goto_nedy_square.cpp
drone-main/test_flights/offboard_set_position_square/: CMakeLists.txt  offboard_set_position_square.cpp
drone-main/test_flights/offboard_set_position_velocity/: CMakeLists.txt  offboard_set_position_velocity.cpp
drone-main/test_flights/partner/: CMakeLists.txt  partner.cpp
drone-main/test_flights/velocity_timeout_square/: CMakeLists.txt  offboard_velocity.old.cpp  square_clock_induced.cpp  square_wait_for_offboard_mode.cpp
drone-main/test_scripts/: demo.sh  leader.sh  partner_cube.sh  partner_cycle_shapes.sh  partner_horizontal_line.sh  partner_octogon.sh  partner_pid_list.txt  partner_pyramid.sh  partner_vertical_line.sh  takeoff.sh
drone-main/utilities/action_goto_gpsay/: CMakeLists.txt  action_goto_gpsay.cpp
drone-main/utilities/action_goto_nedy/: CMakeLists.txt  action_goto_nedy.cpp
drone-main/utilities/offboard_goto_gpsay/: CMakeLists.txt  offboard_goto_gpsay.cpp
drone-main/utilities/offboard_goto_nedy/: CMakeLists.txt  offboard_goto_nedy.cpp
drone-main/utilities/takeoff/: CMakeLists.txt  takeoff.cpp
drone-main/utilities/telemetry/: CMakeLists.txt  telemetry.cpp
